# programmer-agent-cromwell

./: .gitignore  CMakeLists.txt  README.md
design/: 00_ARCHITECTURE_OVERVIEW.md  01_MODEL_ARCHITECTURE.md  02_HARDWARE_OPTIMIZATION.md  03_TOKENIZATION.md  04_TRAINING_PIPELINE.md  05_INFERENCE.md  06_IMPLEMENTATION_ROADMAP.md
src/core/: cross_attention.h  jepa_predictor.h  vision_encoder.h
src/ops/: attention_ops.h  avx2_utils.h  embedding_loss.h  gemm.h  layer_norm.h  patch_ops.h  vision_attention_ops.h
